force-app/main/default/objects/Loan_Case__c/Loan_Case__c.object-meta.xml
<CustomObject>
    <label>Loan Case</label>
    <nameField>
        <label>Loan Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laon Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>