force-app/main/default/objects/Loan_Case__c/fields/Aadhar_Card__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar Card</label>
    <type>Checkbox</type>
</CustomField>