force-app/main/default/objects/Loan_Case__c/fields/Agreement_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Handover_Date__c</fullName>
    <label>Agreement Handover Date</label>
    <type>Date</type>
</CustomField>