force-app/main/default/objects/Loan_Case__c/fields/Appointment_Letter__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Letter</label>
    <type>Checkbox</type>
</CustomField>