force-app/main/default/objects/Loan_Case__c/fields/Bank_POC_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Bank_POC_Mobile__c</fullName>
    <label>Bank POC Mobile</label>
    <type>Phone</type>
</CustomField>