force-app/main/default/objects/Loan_Case__c/fields/Business_Registration_Proof__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Registration Proof</label>
    <type>Checkbox</type>
</CustomField>