force-app/main/default/objects/Loan_Case__c/fields/Call_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Comments__c</fullName>
    <label>Call Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>