force-app/main/default/objects/Loan_Case__c/fields/Case_Logged_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Logged_in_Date__c</fullName>
    <label>Case Logged in Date</label>
    <type>Date</type>
</CustomField>