force-app/main/default/objects/Loan_Case__c/fields/Co_Applicant_Salary_per_month__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Salary_per_month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Co-Applicant Salary (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>