force-app/main/default/objects/Loan_Case__c/fields/Company_Letter_head__c.field-meta.xml
<CustomField>
    <fullName>Company_Letter_head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Letter head</label>
    <type>Checkbox</type>
</CustomField>