force-app/main/default/objects/Loan_Case__c/fields/CST_BST_Service_Tax_Registration__c.field-meta.xml
<CustomField>
    <fullName>CST_BST_Service_Tax_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(If applicable)</inlineHelpText>
    <label>CST / BST / Service Tax Registration</label>
    <type>Checkbox</type>
</CustomField>