force-app/main/default/objects/Loan_Case__c/fields/Disbursement_Against_GST__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Against_GST__c</fullName>
    <label>Disbursement Against GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>