force-app/main/default/objects/Loan_Case__c/fields/Disbursement_Against_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Against_Milestone__c</fullName>
    <label>Disbursement Against Milestone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>