force-app/main/default/objects/Loan_Case__c/fields/Electricity_Bill__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electricity Bill</label>
    <type>Checkbox</type>
</CustomField>