force-app/main/default/objects/Loan_Case__c/fields/Eligibility_Factor_considered__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Factor_considered__c</fullName>
    <label>Eligibility Factor considered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>