force-app/main/default/objects/Loan_Case__c/fields/Employee_ID_Card__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee ID Card</label>
    <type>Checkbox</type>
</CustomField>