force-app/main/default/objects/Loan_Case__c/fields/Employer_ID_Card__c.field-meta.xml
<CustomField>
    <fullName>Employer_ID_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer ID Card</label>
    <type>Checkbox</type>
</CustomField>