force-app/main/default/objects/Loan_Case__c/fields/Employment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Employment_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Profile</label>
    <type>Checkbox</type>
</CustomField>