force-app/main/default/objects/Loan_Case__c/fields/Form_16__c.field-meta.xml
<CustomField>
    <fullName>Form_16__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form 16 (Part A &amp; B) for the last 2 year</label>
    <type>Checkbox</type>
</CustomField>