force-app/main/default/objects/Loan_Case__c/fields/GST_Registration__c.field-meta.xml
<CustomField>
    <fullName>GST_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Registration</label>
    <type>Checkbox</type>
</CustomField>