force-app/main/default/objects/Loan_Case__c/fields/Increment_Letter_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Increment_Letter_if_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Increment Letter (if applicable)</label>
    <type>Checkbox</type>
</CustomField>