force-app/main/default/objects/Loan_Case__c/fields/Is_Document_Collected__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Document Collected</label>
    <type>Checkbox</type>
</CustomField>