force-app/main/default/objects/Loan_Case__c/fields/Is_Sanction_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Sanction_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sanction Uploaded</label>
    <type>Checkbox</type>
</CustomField>