force-app/main/default/objects/Loan_Case__c/fields/ITR_for_the_last_3_years_with_CA_attest__c.field-meta.xml
<CustomField>
    <fullName>ITR_for_the_last_3_years_with_CA_attest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITR for the last 3 years, with CA attest</label>
    <type>Checkbox</type>
</CustomField>