force-app/main/default/objects/Loan_Case__c/fields/Loan_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Call_Status__c</fullName>
    <label>Loan Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>