force-app/main/default/objects/Loan_Case__c/fields/Loan_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>Loan_Case_Stage__c</fullName>
    <label>Loan Case Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Case_Stage</valueSetName>
    </valueSet>
</CustomField>