force-app/main/default/objects/Loan_Case__c/fields/Loan_Documents_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Documents_Handover_Date__c</fullName>
    <label>Loan Documents Handover Date</label>
    <type>Date</type>
</CustomField>