force-app/main/default/objects/Loan_Case__c/fields/Loan_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_File_Number__c</fullName>
    <label>Loan File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>