force-app/main/default/objects/Loan_Case__c/fields/Loan_Meeting_Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Meeting_Next_Follow_up_Date__c</fullName>
    <label>Loan Meeting Next Follow-up Date</label>
    <type>DateTime</type>
</CustomField>