force-app/main/default/objects/Loan_Case__c/fields/Login_Status__c.field-meta.xml
<CustomField>
    <fullName>Login_Status__c</fullName>
    <label>Login Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>