force-app/main/default/objects/Loan_Case__c/fields/Meeting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Comments__c</fullName>
    <label>Meeting Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>