force-app/main/default/objects/Loan_Case__c/fields/Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_up_Date__c</fullName>
    <label>Next Follow-up Date</label>
    <type>DateTime</type>
</CustomField>