force-app/main/default/objects/Loan_Case__c/fields/NOC_Date__c.field-meta.xml
<CustomField>
    <fullName>NOC_Date__c</fullName>
    <label>NOC Date</label>
    <type>Date</type>
</CustomField>