force-app/main/default/objects/Loan_Case__c/fields/Offered_Bank_interest__c.field-meta.xml
<CustomField>
    <fullName>Offered_Bank_interest__c</fullName>
    <label>Offered Bank interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>