force-app/main/default/objects/Loan_Case__c/fields/Ongoing_EMIs_Financial_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_EMIs_Financial_Obligations__c</fullName>
    <label>Ongoing EMIs / Financial Obligations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>