force-app/main/default/objects/Loan_Case__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Cases</relationshipLabel>
    <relationshipName>Loan_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>