force-app/main/default/objects/Loan_Case__c/fields/Own_Salary_per_month__c.field-meta.xml
<CustomField>
    <fullName>Own_Salary_per_month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Own Salary (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>