force-app/main/default/objects/Loan_Case__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Loan Cases</relationshipLabel>
    <relationshipName>Loan_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>