force-app/main/default/objects/Loan_Case__c/fields/ROC_Date__c.field-meta.xml
<CustomField>
    <fullName>ROC_Date__c</fullName>
    <label>ROC Date</label>
    <type>Date</type>
</CustomField>