force-app/main/default/objects/Loan_Case__c/fields/Tenure_considered_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Tenure_considered_In_Years__c</fullName>
    <label>Tenure considered (In Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>