force-app/main/default/objects/Loan_Case__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Loan Cases</relationshipLabel>
    <relationshipName>Loan_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>