force-app/main/default/objects/Loan_Case__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Loan Cases</relationshipLabel>
    <relationshipName>Loan_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>