force-app/main/default/objects/Loan_Case__c/fields/X26AS_statement__c.field-meta.xml
<CustomField>
    <fullName>X26AS_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>26AS statement</label>
    <type>Checkbox</type>
</CustomField>